--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </table>
   <h3>Blue Score: <span id='bluescore'>0</span></h3>
   <h3>Red Score: <span id='redscore'>0</span></h3>
-  <script src='js/main.js'></script>
+  <script src='newproyect.js'></script>
 </body>
 </html>
